--- a/MyTripDiary/MyTripDiary/Base.lproj/Main.storyboard
+++ b/MyTripDiary/MyTripDiary/Base.lproj/Main.storyboard
@@ -116,15 +116,15 @@
                                 <rect key="frame" x="20" y="84" width="335" height="519"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Zaw-FQ-SlA" customClass="DayCell" customModule="MyTripDiary" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="blue" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="daycell" id="Zaw-FQ-SlA" customClass="DayCell" customModule="MyTripDiary" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="335" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Zaw-FQ-SlA" id="kWj-fd-smp">
-                                            <rect key="frame" x="0.0" y="0.0" width="335" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="302" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wu7-yk-DDp">
-                                                    <rect key="frame" x="146" y="11" width="42" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="DayLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wu7-yk-DDp">
+                                                    <rect key="frame" x="146" y="11" width="71" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -132,6 +132,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="title" destination="wu7-yk-DDp" id="1mM-6J-lxR"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -149,7 +152,7 @@
                     <navigationItem key="navigationItem" id="8ev-Jz-gbf"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="tableView" destination="xHw-mK-Efe" id="y7E-7C-TV9"/>
+                        <outlet property="tableView" destination="xHw-mK-Efe" id="ybu-h6-Us8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aWX-Of-anx" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -164,66 +167,75 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="IRh-jg-Ici">
-                                <rect key="frame" x="10" y="74" width="375" height="79"/>
+                            <datePicker contentMode="scaleToFill" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="IRh-jg-Ici">
+                                <rect key="frame" x="10" y="74" width="375" height="193"/>
                                 <date key="date" timeIntervalSinceReferenceDate="580198087.36024904">
                                     <!--2019-05-22 06:08:07 +0000-->
                                 </date>
                             </datePicker>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="kTk-AW-tuU">
-                                <rect key="frame" x="10" y="393" width="355" height="250"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="250" id="kuZ-eN-Wcz"/>
-                                </constraints>
-                            </mapView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Day Summary" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bDk-nO-1bm" userLabel="Day Summary Label">
+                                <rect key="frame" x="20" y="277" width="107" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="WZz-9Q-tqG">
-                                <rect key="frame" x="10" y="173" width="355" height="200"/>
+                                <rect key="frame" x="10" y="287" width="355" height="150"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="200" id="RO2-Hg-raf"/>
+                                    <constraint firstAttribute="height" constant="150" id="RO2-Hg-raf"/>
                                 </constraints>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" spellCheckingType="yes" enablesReturnKeyAutomatically="YES"/>
+                                <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES" calendarEvent="YES" flightNumber="YES" lookupSuggestion="YES"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fmB-hq-gGX">
-                                <rect key="frame" x="10" y="643" width="355" height="14"/>
+                                <rect key="frame" x="10" y="657" width="355" height="0.0"/>
+                                <color key="backgroundColor" red="0.31078652220000003" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Save"/>
                                 <connections>
                                     <action selector="saveChanges:" destination="8rw-gH-4EK" eventType="touchUpInside" id="7Ov-0m-JBa"/>
                                 </connections>
                             </button>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="kTk-AW-tuU">
+                                <rect key="frame" x="10" y="457" width="355" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="200" id="kuZ-eN-Wcz"/>
+                                </constraints>
+                            </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="IRh-jg-Ici" firstAttribute="trailing" secondItem="L9r-0B-dgg" secondAttribute="trailing" constant="10" id="0SF-50-frV"/>
                             <constraint firstItem="fmB-hq-gGX" firstAttribute="leading" secondItem="L9r-0B-dgg" secondAttribute="leading" constant="10" id="2wx-bx-E0g"/>
                             <constraint firstItem="L9r-0B-dgg" firstAttribute="bottom" secondItem="fmB-hq-gGX" secondAttribute="bottom" constant="10" id="4mt-VK-16u"/>
+                            <constraint firstItem="bDk-nO-1bm" firstAttribute="leading" secondItem="L9r-0B-dgg" secondAttribute="leading" constant="20" id="5uU-r4-NNz"/>
                             <constraint firstItem="L9r-0B-dgg" firstAttribute="trailing" secondItem="kTk-AW-tuU" secondAttribute="trailing" constant="10" id="Aae-Qw-Scm"/>
-                            <constraint firstItem="WZz-9Q-tqG" firstAttribute="top" secondItem="5re-Wb-dGL" secondAttribute="top" constant="173" id="Bpc-qY-1de"/>
                             <constraint firstItem="IRh-jg-Ici" firstAttribute="leading" secondItem="L9r-0B-dgg" secondAttribute="leading" constant="10" id="CoQ-h9-AeW"/>
                             <constraint firstItem="kTk-AW-tuU" firstAttribute="leading" secondItem="L9r-0B-dgg" secondAttribute="leading" constant="10" id="EFc-Lq-RJ0"/>
+                            <constraint firstItem="bDk-nO-1bm" firstAttribute="top" secondItem="IRh-jg-Ici" secondAttribute="bottom" constant="10" id="FpP-sf-I6a"/>
                             <constraint firstItem="IRh-jg-Ici" firstAttribute="top" secondItem="L9r-0B-dgg" secondAttribute="top" constant="10" id="Hts-rb-cpq"/>
                             <constraint firstItem="L9r-0B-dgg" firstAttribute="trailing" secondItem="fmB-hq-gGX" secondAttribute="trailing" constant="10" id="M7T-a4-rlw"/>
-                            <constraint firstItem="WZz-9Q-tqG" firstAttribute="top" secondItem="IRh-jg-Ici" secondAttribute="bottom" constant="20" id="TyB-C0-CAp"/>
+                            <constraint firstItem="L9r-0B-dgg" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="bDk-nO-1bm" secondAttribute="trailing" symbolic="YES" id="TbS-pN-lqm"/>
                             <constraint firstItem="fmB-hq-gGX" firstAttribute="top" secondItem="kTk-AW-tuU" secondAttribute="bottom" id="Xmw-0w-K6Q"/>
                             <constraint firstItem="WZz-9Q-tqG" firstAttribute="leading" secondItem="L9r-0B-dgg" secondAttribute="leading" constant="10" id="YBb-a5-BnQ"/>
                             <constraint firstItem="kTk-AW-tuU" firstAttribute="top" secondItem="WZz-9Q-tqG" secondAttribute="bottom" constant="20" id="cxy-Yx-A8o"/>
                             <constraint firstItem="L9r-0B-dgg" firstAttribute="trailing" secondItem="WZz-9Q-tqG" secondAttribute="trailing" constant="10" id="hbi-Lq-OnD"/>
+                            <constraint firstItem="WZz-9Q-tqG" firstAttribute="top" secondItem="bDk-nO-1bm" secondAttribute="bottom" constant="10" id="jlS-d7-puC"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="L9r-0B-dgg"/>
                     </view>
                     <navigationItem key="navigationItem" id="MIF-s1-wk8"/>
                     <connections>
                         <outlet property="dataPicker" destination="IRh-jg-Ici" id="XsH-gm-uCx"/>
+                        <outlet property="daySummary" destination="WZz-9Q-tqG" id="39r-al-wdF"/>
                         <outlet property="mapView" destination="kTk-AW-tuU" id="d4F-Ng-TBF"/>
                         <outlet property="saveButton" destination="fmB-hq-gGX" id="giS-Bj-lba"/>
-                        <outlet property="summary" destination="WZz-9Q-tqG" id="CLK-NZ-T6p"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V5E-v7-aah" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1961" y="538"/>
+            <point key="canvasLocation" x="1960.8" y="537.48125937031489"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Tcd-q6-YgM">
