Added showing photos collection view from pin

--- a/MyTripDiary/MyTripDiary/Base.lproj/Main.storyboard
+++ b/MyTripDiary/MyTripDiary/Base.lproj/Main.storyboard
@@ -238,7 +238,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V5E-v7-aah" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1960.8" y="537.48125937031489"/>
+            <point key="canvasLocation" x="1750" y="537"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Tcd-q6-YgM">
@@ -256,21 +256,146 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JGy-rq-4aZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1265" y="537"/>
+            <point key="canvasLocation" x="1049" y="537"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="JTi-7X-Xqs">
+        <!--Photos Collection View Controller-->
+        <scene sceneID="SxR-kp-bN6">
             <objects>
-                <viewController id="5XR-0B-5Yy" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="JZU-w3-DuX">
+                <viewController storyboardIdentifier="photosCollectionView" id="ka2-wV-XEZ" customClass="PhotosCollectionViewController" customModule="MyTripDiary" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Le4-8X-85F">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="uwf-ju-AnR">
+                                <rect key="frame" x="20" y="35" width="335" height="57"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search by Flickr User ID (optional)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xzp-QJ-GMD">
+                                        <rect key="frame" x="0.0" y="0.0" width="221" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JwJ-0T-8dc">
+                                        <rect key="frame" x="0.0" y="27" width="325" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailingMargin" secondItem="JwJ-0T-8dc" secondAttribute="trailing" constant="10" id="E6n-Tv-J6N"/>
+                                </constraints>
+                            </stackView>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Wsc-CY-xxL">
+                                <rect key="frame" x="20" y="117" width="335" height="127"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="127" id="yFz-8P-U3F"/>
+                                </constraints>
+                            </mapView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="R70-2w-Gma">
+                                <rect key="frame" x="20" y="254" width="335" height="353"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="pIR-7K-Lmj">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCollectionViewCell" id="JCH-F3-8AT" customClass="PhotoCollectionViewCell" customModule="MyTripDiary" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="whD-lI-y2f">
+                                                    <rect key="frame" x="-95" y="-39" width="240" height="128"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="No image" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EeJ-WA-b9e">
+                                                    <rect key="frame" x="4" y="14" width="62" height="17"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <connections>
+                                            <outlet property="flickrImage" destination="whD-lI-y2f" id="spE-5B-ggv"/>
+                                            <outlet property="noImage" destination="EeJ-WA-b9e" id="eFS-7n-NLt"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GSh-2i-4iw">
+                                <rect key="frame" x="20" y="536" width="335" height="120"/>
+                                <color key="backgroundColor" red="0.46202266219999999" green="0.83828371759999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Load Photos">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="load:" destination="ka2-wV-XEZ" eventType="touchUpInside" id="eDg-wr-0Is"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="XDB-BV-sJr"/>
+                        <constraints>
+                            <constraint firstItem="GSh-2i-4iw" firstAttribute="top" secondItem="R70-2w-Gma" secondAttribute="bottom" constant="10" id="2g3-wc-3EJ"/>
+                            <constraint firstItem="GSh-2i-4iw" firstAttribute="leading" secondItem="h2k-LC-jPF" secondAttribute="leading" constant="20" id="3Xn-cp-Lxn"/>
+                            <constraint firstItem="R70-2w-Gma" firstAttribute="leading" secondItem="h2k-LC-jPF" secondAttribute="leading" constant="20" id="9mb-H9-78Z"/>
+                            <constraint firstItem="h2k-LC-jPF" firstAttribute="trailing" secondItem="R70-2w-Gma" secondAttribute="trailing" constant="20" id="9sH-du-sTH"/>
+                            <constraint firstItem="uwf-ju-AnR" firstAttribute="leading" secondItem="Wsc-CY-xxL" secondAttribute="leading" id="Ltz-2a-egU"/>
+                            <constraint firstItem="h2k-LC-jPF" firstAttribute="trailing" secondItem="GSh-2i-4iw" secondAttribute="trailing" constant="20" id="R12-vk-aBq"/>
+                            <constraint firstItem="uwf-ju-AnR" firstAttribute="top" secondItem="h2k-LC-jPF" secondAttribute="top" constant="15" id="Raa-wr-jyI"/>
+                            <constraint firstItem="R70-2w-Gma" firstAttribute="firstBaseline" secondItem="Wsc-CY-xxL" secondAttribute="baseline" constant="10" id="UNz-QQ-ITA"/>
+                            <constraint firstItem="Wsc-CY-xxL" firstAttribute="leading" secondItem="h2k-LC-jPF" secondAttribute="leading" constant="20" id="VE2-dZ-3po"/>
+                            <constraint firstItem="h2k-LC-jPF" firstAttribute="trailing" secondItem="Wsc-CY-xxL" secondAttribute="trailing" constant="20" id="Ywo-WU-XZU"/>
+                            <constraint firstItem="h2k-LC-jPF" firstAttribute="bottom" secondItem="GSh-2i-4iw" secondAttribute="bottom" constant="20" id="hoE-hl-GXU"/>
+                            <constraint firstItem="h2k-LC-jPF" firstAttribute="trailing" secondItem="uwf-ju-AnR" secondAttribute="trailing" constant="20" id="wRC-BR-nqC"/>
+                            <constraint firstItem="Wsc-CY-xxL" firstAttribute="top" secondItem="uwf-ju-AnR" secondAttribute="bottom" constant="25" id="x1h-Fj-0Hn"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="h2k-LC-jPF"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="sVy-tv-XHt"/>
+                    <connections>
+                        <outlet property="loadPhotos" destination="GSh-2i-4iw" id="i2X-7u-jer"/>
+                        <outlet property="mapView" destination="Wsc-CY-xxL" id="BuE-6b-6Mv"/>
+                        <outlet property="photoCollectionView" destination="R70-2w-Gma" id="eWp-EP-quG"/>
+                        <outlet property="searchByUserIDLabel" destination="Xzp-QJ-GMD" id="hHC-Le-YGb"/>
+                        <outlet property="userIDTextField" destination="JwJ-0T-8dc" id="Lva-8O-lZv"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QzD-Qa-4RG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2668" y="547"/>
+        </scene>
+        <!--Photo View Controller-->
+        <scene sceneID="APp-zX-80V">
+            <objects>
+                <viewController storyboardIdentifier="photoViewController" id="Bt4-ib-JAv" customClass="PhotoViewController" customModule="MyTripDiary" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pad-AK-Gtb">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Wkp-pE-m7o">
+                                <rect key="frame" x="20" y="40" width="335" height="607"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="0Jd-re-HR9" firstAttribute="trailing" secondItem="Wkp-pE-m7o" secondAttribute="trailing" constant="20" id="1yo-Hj-rBM"/>
+                            <constraint firstItem="Wkp-pE-m7o" firstAttribute="top" secondItem="0Jd-re-HR9" secondAttribute="top" constant="20" id="H7t-NJ-jA4"/>
+                            <constraint firstItem="Wkp-pE-m7o" firstAttribute="leading" secondItem="0Jd-re-HR9" secondAttribute="leading" constant="20" id="OFv-hU-vjw"/>
+                            <constraint firstItem="0Jd-re-HR9" firstAttribute="bottom" secondItem="Wkp-pE-m7o" secondAttribute="bottom" constant="20" id="yvv-PI-ajo"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="0Jd-re-HR9"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="bpQ-5i-g3b" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uTV-UE-YFp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="3097" y="1955"/>
         </scene>
     </scenes>
     <resources>
